--- a/config/application.properties
+++ b/config/application.properties
@@ -7,7 +7,11 @@ spring.application.name=badapi
 
 # EMBEDDED SERVER CONFIGURATION
 server.port=8745
+google.map.key=AIzaSyBCo4NvT8LBKETKWVmnHbGGKnQWNsIPjLk
 
-
-
-
+app.mongodb.host=ds115874.mlab.com
+app.mongodb.port=15874
+app.mongodb.authentication-database=prukdb
+app.mongodb.username=pruk
+app.mongodb.password=P@$$w0rd
+app.mongodb.database=prukdb
