--- a/config/application.properties
+++ b/config/application.properties
@@ -7,6 +7,8 @@ spring.application.name=badapi
 
 # EMBEDDED SERVER CONFIGURATION
 server.port=8745
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
 google.map.key=AIzaSyBCo4NvT8LBKETKWVmnHbGGKnQWNsIPjLk
 
 app.mongodb.host=ds115874.mlab.com
